tests/src/frontend/syntax/invalid/when_clause_missing_constraint.sk
class C<T> {
  fun m<U>[T](): void { void }
}

fun main(): String {""}
